--- a/src/template.html
+++ b/src/template.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Autocompletion Component</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
 </head>
 <body>
   <div class="container">
